# ChangeLog for x11-libs/xview
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/xview/ChangeLog,v 1.30 2008/06/18 00:44:24 darkside Exp $

  03 Nov 2008; justin Lecher <justin@j-schmitz.net>
  +files/CAN-2005-0076.patch, +files/lseek.diff, +metadata.xml,
  +xview-3.2-r6.ebuild:
  Taken over

  18 Jun 2008; Jeremy Olexa <darkside@gentoo.org> xview-3.2-r6.ebuild:
  Add missing dep x11-misc/xbitmaps to xview. bug #227587

  21 Apr 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Fix up metadata.xml. If there's no maintainer for the package, the metadata
  also needs to contain m-needed@g.o.

  12 Sep 2007; Raúl Porcel <armin76@gentoo.org> -xview-3.2-r5.ebuild,
  xview-3.2-r6.ebuild:
  x86 stable wrt #192290 and remove old

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>; xview-3.2-r5.ebuild:
  Drop virtual/x11 references.

  01 Jul 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Once again, with passion.

  01 Jul 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest to compensate Attic/ value in CVS header expansion.

  01 Jul 2007; Diego Pettenò <flameeyes@gentoo.org> +xview-3.2-r6.ebuild:
  Revision bump to fix building when /usr/X11R6 is missing, see bug #149712
  and the long list of dupes.

  29 Sep 2006; Olivier Fisette <ribosome@gentoo.org> xview-3.2-r5.ebuild:
  Added missing dependency on imake.

  01 Aug 2006; Olivier Fisette <ribosome@gentoo.org> -xview-3.2.ebuild,
  -xview-3.2-r1.ebuild, -xview-3.2-r3.ebuild, -xview-3.2-r4.ebuild,
  xview-3.2-r5.ebuild, -xview-3.2-r6.ebuild:
  Backported fix for bug #67924 to the stable tree. Removed stale versions.

*xview-3.2-r6 (01 Aug 2006)

  01 Aug 2006; Olivier Fisette <ribosome@gentoo.org> +xview-3.2-r6.ebuild:
  Added dependencies on Lucida Bright and Sun Cursor fonts. (Fixes bug
  #67924.) These fonts are no longer provided by virtual/x11.
