@@ -1,11 +1,11 @@
 AUX CAN-2005-0076.patch 984 RMD160 46d0ff56c23b414bf566c27720aedfbaf7b0d8a7 SHA1 e64c6efe18525d3519dbb5453cd4211ac0b7b9b4 SHA256 f94cc69cc3156bf5c80b3fe920f2b505e3daac0cf598def8b0b763abc2d06813
-AUX lseek.diff 815 RMD160 008b5a039b5014b581d0699a3241142d2a019c1c SHA1 a1b6899ec1e77ce5888a3be6af49bb5b93bb1ce0 SHA256 077e3516cae73d8649b477250cf7f70c7c8f21ba36515f837a8a737d8501ead3
+AUX lseek.diff 897 RMD160 c70b0ed6d846369a7dc1a1f4093186b6f51de64a SHA1 ddecf2527aa1b555b484e3da48fe6c03c7899b7b SHA256 4a0eb56dfadd48f839d2621804763d3dd550f978ac94500660f5cd45877da578
+AUX lseek2.diff 815 RMD160 008b5a039b5014b581d0699a3241142d2a019c1c SHA1 a1b6899ec1e77ce5888a3be6af49bb5b93bb1ce0 SHA256 077e3516cae73d8649b477250cf7f70c7c8f21ba36515f837a8a737d8501ead3
 AUX xview-3.2-gcc-4.1-v0.1.patch 47278 RMD160 dfe32a36712665f4be58657efa97474a455957a6 SHA1 c8edfb17e9866e6112502c5f49cf15f8ac6c86f9 SHA256 438ec1ecfd31ba71d70c34fa86f5d76151740fbbc8fb12dca519f1923ee29a2d
 DIST xview-3.2-gcc-4.1-v0.1.patch.bz2 8018 RMD160 0387c073d7f4c8303467f3065ba2a573fdb6710e SHA1 f06eb2412e4d61dffaee7db436527d7933a50931 SHA256 2b26f10122535eff43a4f87fc97ffb54eac88c312a3688b05bce806ce9a273ba
 DIST xview-3.2p1.4-19c.tar.gz 3350088 RMD160 6e0e90a737df7de8d30dbbd647527d599f13e8dd SHA1 1a2023945edef33ea4251fcb3b9e69bcf35a531c SHA256 ce05762918ccaa0bd86819e1347b57b6d0e5d515b148f9f740d3ffd1fa9eea83
 DIST xview-3.2p1.4-21.1.fc8.src.rpm 3322365 RMD160 d6f516f313bf55fba811c4d9f2847aa055d48848 SHA1 feb97c7a8604f272a9e152eaf94e6bff5063dd6e SHA256 9e6021a489b5dd5a5d1acd75dd6ec4901f6fa4298114994233c494056567bea3
-EBUILD xview-3.2-r6.ebuild 3210 RMD160 0466764a6ba10a3ce8942f42d273b9905af7f005 SHA1 99d1db5ff366a8c493c7af919b7edada2052a271 SHA256 cc3f1f1372effbf0a72b3b0c97b090ab5017f39e8ef27604ca3a88d6b2ce25aa
-EBUILD xview-3.2-r7.ebuild 4395 RMD160 046affb6d45953e738d20ec5b2d35fcef65c5c5e SHA1 a3364d4ce37a9cf4807a206d9c16d644916291ed SHA256 5c620835c4411a64a45d12d3c5194c2a6eafc78e0946a8c2b80d78fabf12579d
-EBUILD xview-3.2-r8.ebuild 3393 RMD160 b1201cfe3d4aa58fbaae56b3124ffa441b3b8980 SHA1 e3968a9c3a6175a7a841e10b8d1f54224acc1067 SHA256 15a2220b39e45c71d4116415d2355c69e7a6f78b1d5b3d8513a7b1654a1a6230
-MISC ChangeLog 4919 RMD160 6891cc66081b8bcb05bc7d3462369d0c9310feb1 SHA1 9cef66d031d5271a4dee3d8db8311a0f5494af74 SHA256 dd620d9a8656d6ee9c05b1075c1d6ab0ebaf3744b137cf423d468a4aa821f4e9
+EBUILD xview-3.2-r6.ebuild 3630 RMD160 354aba1eefb98be96218800e60861a92a31e87d6 SHA1 b147c1fba7ab2d318af0fa574f968e944f774f3a SHA256 cd2b1eb82c556997fdbdd92baebef56118393b5ad6274434b2553e25cfe7493b
+EBUILD xview-3.2-r8.ebuild 3386 RMD160 893998344dd86cc16842b27706e6e6226c9cb5a5 SHA1 2d9ca572aec98db52128b6b16f5ea2bd4334adc2 SHA256 40b2051a7762e4a9a3e6eb44c822180085a6124a843b1589e2649d12144b7c23
+MISC ChangeLog 5074 RMD160 d87b53021effbdd99c283e6c22c49ff2912bc50e SHA1 0af5f9b4941c86b1b1e073e9a2d8cd1a68fec37c SHA256 dd62d9045422ced9d1aa8cf95291136b9aba2739118166ce1341d31e9c49b39a
 MISC metadata.xml 411 RMD160 eb4983e35d99c3ef60ee12c190d2b009c7b1809b SHA1 807b3fe3561c3f7d887cfd42fd941bfe5a0646e4 SHA256 669a67672dba2577f1c0056d08e1070ac50a5564bb5376c7f44b68318ae5e04f
